--- a/Chapter2_NLP_with_Transfomers.ipynb
+++ b/Chapter2_NLP_with_Transfomers.ipynb
@@ -1835,22 +1835,22 @@
           ]
         },
         "id": "KXAAPEaTBWZM",
-        "outputId": "8633ce8b-f3bd-40f3-8e92-ea9f9bf417b5"
+        "outputId": "6c836aef-fae0-460e-9680-ee628ed0f46a"
       },
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "4c256fabe09147be839be5d97f6d414b",
+              "version_major": 2,
+              "version_minor": 0
+            },
             "text/plain": [
               "Map:   0%|          | 0/16000 [00:00<?, ? examples/s]"
-            ],
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": "4c256fabe09147be839be5d97f6d414b"
-            }
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         }
       ],
       "source": [
@@ -8991,7 +8991,7 @@
             "layout": "IPY_MODEL_13ae3c60971b42d7ac31bd79fcb156d9",
             "placeholder": "​",
             "style": "IPY_MODEL_613bf58ecb304b839843dc93dfd1f95c",
-            "value": "Map:   0%"
+            "value": "Map:  44%"
           }
         },
         "d7468622afae4006be8fd382340d8cb2": {
@@ -9015,7 +9015,7 @@
             "min": 0,
             "orientation": "horizontal",
             "style": "IPY_MODEL_81b8daf451514e0e942eaeb580398a86",
-            "value": 0
+            "value": 7000
           }
         },
         "50508a6b0eae4a3fb19d3ad1400e9703": {
@@ -9036,7 +9036,7 @@
             "layout": "IPY_MODEL_9d292b1ab5b04e9e9d459b053f1e695b",
             "placeholder": "​",
             "style": "IPY_MODEL_4c46bf2f7ae94593980b50aa50d9f93a",
-            "value": " 0/16000 [00:00&lt;?, ? examples/s]"
+            "value": " 7000/16000 [39:32&lt;50:26,  2.97 examples/s]"
           }
         },
         "95f082757a464a94ba012b62a7a8490f": {
